--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   padding: 20px;
 }
 
@@ -15,5 +16,31 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  height: 90%;
+  height: 80vh;
+}
+
+.top-display {
+  
+  color: #AB6FEB;
+  
+  
+  margin-bottom: 20px;
+  border-bottom: 1px solid #e7cdf4;
+}
+
+.flex{
+  background-color: white;
+  font-size: 18px;
+    font-weight: bold;
+    padding: 10px;
+  width: 100px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.selected-item-display {
+  font-size: 24px;
+  color: #AB6FEB;
+  text-align: center;
+  margin-top: 20px;
 }
