--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   font-family: Arial, sans-serif;
   background-color: #f4f5f7;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   display: flex;
   justify-content: center;
