--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 250px;
+  width: 350px;
   background-color: #f4f5f7;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
@@ -11,6 +11,7 @@
 }
 
 .sidebar li {
+  width: 100%;
   padding: 10px;
   font-size: 16px;
   color: #888;
@@ -19,6 +20,6 @@
 
 .sidebar li.active,
 .sidebar li:hover {
-  color: #fff;
-  background-color: #e2e2e2;
+  color: #AB6FEB;
+  background-color: #e7cdf4;
 }
